recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:2: error: not found: value i
  i=0
  ^Tree:12: error: not found: value i
  i=i+1
  ^Tree:15: error: not found: value i
    for (k<-0 to i){
                 ^